Switch Crux to use java.net.URI instead of java.net.URL so that non-Web schemes such as "about:" and "data:" can be parsed validly.