@@ -2,8 +2,8 @@ package com.chimbori.crux.urls;
 
 import com.chimbori.crux.common.StringUtils;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 class Redirectors {
   private Redirectors() {
@@ -17,22 +17,22 @@ class Redirectors {
     /**
      * @return true if this RedirectPattern can handle the provided URL, false if not.
      */
-    public abstract boolean matches(URL url);
+    public abstract boolean matches(URI url);
 
     /**
      * @return the actual URL that is pointed to by this redirector URL.
      */
-    public abstract URL resolve(URL url) throws MalformedURLException;
+    public abstract URI resolve(URI url) throws URISyntaxException;
 
     /**
      * To avoid every implementing class wrap their own code with a try-catch, they are encouraged
-     * to use the resolve() method which throws {@link MalformedURLException}, while callers can
+     * to use the resolve() method which throws {@link URISyntaxException}, while callers can
      * use this method which simply wraps that method’s return value in a try-catch.
      */
-    URL resolveHandlingException(URL url) {
+    URI resolveHandlingException(URI url) {
       try {
         return resolve(url);
-      } catch (MalformedURLException e) {
+      } catch (URISyntaxException e) {
         return url;
       }
     }
@@ -41,24 +41,24 @@ class Redirectors {
   static final RedirectPattern[] REDIRECT_PATTERNS = {
       new RedirectPattern() {  // Facebook.
         @Override
-        public boolean matches(URL url) {
+        public boolean matches(URI url) {
           return url.getHost().endsWith(".facebook.com") && url.getPath().equals("/l.php");
         }
 
         @Override
-        public URL resolve(URL url) throws MalformedURLException {
-          return new URL(StringUtils.getQueryParameters(url).get("u"));
+        public URI resolve(URI url) throws URISyntaxException {
+          return new URI(StringUtils.getQueryParameters(url).get("u"));
         }
       },
       new RedirectPattern() {  // Google.
         @Override
-        public boolean matches(URL url) {
+        public boolean matches(URI url) {
           return url.getHost().endsWith(".google.com") && url.getPath().equals("/url");
         }
 
         @Override
-        public URL resolve(URL url) throws MalformedURLException {
-          return new URL(StringUtils.getQueryParameters(url).get("q"));
+        public URI resolve(URI url) throws URISyntaxException {
+          return new URI(StringUtils.getQueryParameters(url).get("q"));
         }
       }
   };
